--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>linh</title>
+    <title>myweb</title>
 </head>
 <body>
     <h1>heading 1</h1>
     <h2>heading 1</h2>
     <h3>heading 1</h3>
-    This sample <del>Linh</del>
-    <cite>ko hieu gi lun</cite>
+    This sample <del>xoah</del>
+    <cite>cite</cite>
     <ol>
         <li>a</li>
         <li>b</li>
