--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myweb123</title>
+    <title>web123</title>
 </head>
 <body>
     <h1>heading 1</h1>
-    <h2>heading 1</h2>
-    <h3>heading 1</h3>
-    This sample <del>xoah</del>
+    <h2>heading 2</h2>
+    <h3>heading 3</h3>
+    This sample <del>xoa</del>
     <cite>cite</cite>
     <ol>
         <li>a</li>
